fixed collapsed and expanded items css

--- a/app/(portfolio)/_components/components.module.css
+++ b/app/(portfolio)/_components/components.module.css
@@ -4,7 +4,6 @@
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
-    gap: 5vh;
 }
 
 /* classes related to default items (nothing expanded) */
@@ -45,19 +44,47 @@ expands the portfolio item when clicked
     max-height: 50%;
 }
 
+/* clases related to an expanded portfolio item */
+
 /* interactive button holding the portfolio item information when the item is expanded
 closes the expansion when clicked 
 */
 .expandedItemContainer {
     display: flex;
     flex-direction: column;
+    background-color: var(--off-white);
+    max-width: 1680px;
+    margin: auto;
+    margin-bottom: 2vh;
     border: solid black 1px;
+    padding: 0 50px;
+}
+
+/* item title */
+.expandedItemContainer > h1 {
+    
+}
+
+/* click-through button */
+.expandedItemContainer > button {
+    margin: auto;
+    margin-top: 2vh;
+    min-width: 20vw;
+    min-height: 5vh;
 }
 
 /* classes related to collapsed items (thumbnail only) */
+
+/* container that holds thumbnails*/
 .collapsedItemsContainer {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     border: solid black 1px;
+    justify-content: center;
+}
+/* portfolio items that exist as thumbnails below an expanded item */
+.portfolioItemThumbnail {
+    padding: 0;
+    border: 0;
 }
